# production-ready-chatbot

./: README.md  pyproject.toml  vector_database.py
app/: server.py
copilot/: .workspace
copilot/production-ready-tutorial/: manifest.yml
copilot/production-ready-tutorial/addons/: bedrock-policy.yml
