[tool.poetry]
name = "ProductionChatbot_2024.06"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.2.1"}
pydantic = "<2"
python-decouple = "^3.8"
boto3 = "^1.34.118"
langchain = "^0.2.1"
langchain-aws = "^0.1.6"
langchain-community = "^0.2.1"
langchain-pinecone = "^0.1.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
